test/errors/js-syntax-error-in-js.txt
Error parsing script for naughty-plopper
unknown: Unexpected token, expected "{" (1:14)

> 1 | class Naughty Plopper {
    |               ^
  2 | 
  3 | }
  4 | 
